--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
         <div class="texto">
             <p>Liked by <b>4GeeksAcademy, html5, Web</b> and <b>100,000 others</b></p>
             <p>&nbsp;</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt assumenda blanditiis neque veritatis
-                officia laboriosam vero numquam, nihil mollitia minus adipisci necessitatibus quasi qui commodi ipsum
-                nemo corrupti vitae molestiae!</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt sed assumenda blanditiis neque veritatis
+                officia laboriosam vero diam numquam, nihil mollitia minus adipisci necessitatibus quasi qui commodi ipsum
+                nemo corrupti vitae molestiae! ex ea commodo consequiat.</p>
         </div>
     </div>
 </body>
